color selected and background  image

--- a/index.html
+++ b/index.html
@@ -2,8 +2,57 @@
 <html>
 <head>
 	<title>E-learning</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+<div class="bannerholder">
+	<div class="logoholder"> 
+		logo here<br><br><br>
+	</div>
+	<center>
+		<div class="navbar">
+			<br>
+				<nav>
+		<a href="#" class="active"><span><i class="fa fa-home iconz"></i></span> &nbsp;Home</a>
+		<a href="#"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Schedule</a>
+		<a href="#"><span><i class="fa fa-user iconz"></i></span> &nbsp;Account</a>	
+	</nav>
+		</div>
+	
+	</center>
+	
+</div>
+<br>
+<div class="backgroung-image"
+style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(images/background.jpg);">
+<div class="overlay-content">
+	<h2>Online learning Platform</h2><br>
+	<p>
+	Shape your future through education, simple and efficient way to learn and adortp to ever changing world	
+	</p>
+	<p>
+		Get instant update on schedule <br>
+		<span class="spanassignment">Assignment</span> <br>
+		 <span class="spanexam">Exam</span> <br>
+		 <span class="spannotes">Notes</span> 
+	</p>
+</div>
+</div>
+<br>
+<div class="main-content">
+	<br><br><br>
 
+</div>
+
+ <div>
+ 	color holders
+ 	<div style="background: #FEC12C;"> 1</div>
+ 	<div style="background: #1e90ff;">2</div>
+ 	<div style="background: #FD4935;">3</div>
+ 	<div style="background: brown">4</div>
+ </div>
 </body>
 </html>
