Hope page design footer added and technical team added

--- a/index.html
+++ b/index.html
@@ -46,13 +46,63 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 	<br><br><br>
 
 </div>
+<br>
+<div class="technicalassistant">
+	<div class="technicalassistantimage">
+		<img src="images/technical.jpg" width="100%">
+	</div>
+	<br>
+	<div class="technicalassistantdescription">
+		<p>
+			With 100 percent of our effort going toward maintaining our current system, it is essential that we are both efficient and effective with our Servicein several ways:
+			<ul>
+				<li class="technical1">
+					By analyzing ways to maximize the existing infrastructure 
+				</li>
+				<li class="technical2">
+					By being proactive and investing in preventive maintenance activities 
+				</li>
+				<li class="technical3">
+					By helping Students make informed Learning decisions
+				</li>
+			</ul>
+      <span>
+      These efficiencies are just a few examples of how E-Learning is working to maximize our existing system. The Department will continue to analyze and implement more operational efficiencies as opportunities arise.
+      </span>
+		</p>
+	</div>
+</div><br>
+<div class="footer">
+	<div class="rightfooter">
+		<center>
+			<label class="contacthead">Contact</label><br>
+			<a href="#"><span><i class="fa fa-envelope iconz"></i></span>  email@gmail.com</a><br>
+			<a href="#"><span><i class="fa fa-facebook iconz"></i></span>  facbook</a><br>
+			<a href="#"><span><i class="fa fa-twitter iconz"></i></span>  twitter</a><br>
+		</center>
+		
 
+	</div>
+	<div class="leftfooter">
+		<br>
+		<center>
+		 <label>E-Learning System </label><br>
+		 <label>Learning Notes </label><br>
+		 <label>Practicles </label><br>
+		 <label>Online Lectures </label><br>
+		 <br>
+		 <br>
+		 <label>&copy; e-learning</label>
+		</center><br>
+	</div>
+</div>
+<!-- 
  <div>
  	color holders
  	<div style="background: #FEC12C;"> 1</div>
  	<div style="background: #1e90ff;">2</div>
  	<div style="background: #FD4935;">3</div>
  	<div style="background: brown">4</div>
- </div>
+ </div> -->
 </body>
 </html>
