--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 <br>
 <div class="main-content">
 	<br><br><br>
-
+		activiis display
+</div>
+<div>
+	week end schedule
+</div>
+<div>
+	main schedule
 </div>
 <br>
 <div class="technicalassistant">
