comleted UI design for home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="styles/banner.css">
+	<link rel="stylesheet" type="text/css" href="styles/index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
 			<br>
 				<nav>
 		<a href="#" class="active"><span><i class="fa fa-home iconz"></i></span> &nbsp;Home</a>
-		<a href="#"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Schedule</a>
+		<a href="index.html#schedule-section"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Schedule</a>
 		<a href="#"><span><i class="fa fa-user iconz"></i></span> &nbsp;Account</a>	
 	</nav>
 		</div>
@@ -43,14 +44,235 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 </div>
 <br>
 <div class="main-content">
-	<br><br><br>
-		activiis display
+	<div class="content-holder">
+		<div class="content-image">
+			<img src="images/technical.jpg" width="80%">
+		</div>
+		<br>
+		<div class="content-discription">
+			<p>
+			With 100 percent of our effort going toward maintaining our current system, it is essential that we are both efficient and effective with our Servicein several ways:
+			
+      <span>
+      These efficiencies are just a few examples of how E-Learning is working to maximize our existing system. The Department will continue to analyze and implement more operational efficiencies as opportunities arise.
+      </span>
+		</p>
+		</div>
+	</div><br>
+	<div class="content-holder">
+		<div class="content-discription">
+			<p>
+			With 100 percent of our effort going toward maintaining our current system, it is essential that we are both efficient and effective with our Servicein several ways:
+			
+      <span>
+      These efficiencies are just a few examples of how E-Learning is working to maximize our existing system. The Department will continue to analyze and implement more operational efficiencies as opportunities arise.
+      </span>
+		</p>
+		</div><br>
+		<div class="content-image">
+			<img src="images/technical.jpg" width="80%">
+		</div>
+	</div>
 </div>
-<div>
-	week end schedule
+<div class="weekend-schedule" id="schedule-section">
+	<div class="weeked-discription">
+		<center>
+		 <label class="weekend-header">This weeked activities</label>
+		 <ol>
+		 	<li class="weekend-activitiy1">Design</li>
+		 	<li class="weekend-activitiy2">Design</li>
+		 	<li class="weekend-activitiy1">Design</li>
+		 </ol>
+		 </center>
+	</div>
+</div><br>
+<div class="schedule-holder">
+	<div class="monday-schedule schedules">
+		<br>
+		<center>
+			<div class="daydisplay">
+				<center>
+					Monday
+				</center>
+			</div>
+			</center>
+			<br>
+			<table>
+				<thead>
+					<tr>
+						<td>Time</td>
+						<td>Activity</td>
+						<td>Venue</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8:00Am</td>
+						<td>Activity 1</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>11:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>1:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+				</tbody>
+			</table>
 </div>
-<div>
-	main schedule
+	<div class="tuesday-schedule schedules">
+		<br>
+		<center>
+			<div class="daydisplay">
+				<center>
+					Tuesday
+				</center>
+			</div>
+			</center>
+			<br>
+			<table>
+				<thead>
+					<tr>
+						<td>Time</td>
+						<td>Activity</td>
+						<td>Venue</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8:00Am</td>
+						<td>Activity 1</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>11:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>1:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+				</tbody>
+			</table>
+</div>
+	<div class="wednesday-schedule schedules">
+		<br>
+		<center>
+			<div class="daydisplay">
+				<center>
+					Wednesday
+				</center>
+			</div>
+			</center>
+			<br>
+			<table>
+				<thead>
+					<tr>
+						<td>Time</td>
+						<td>Activity</td>
+						<td>Venue</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8:00Am</td>
+						<td>Activity 1</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>11:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>1:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+				</tbody>
+			</table>
+</div>
+	<div class="thursday-schedule schedules">
+		<br>
+		<center>
+			<div class="daydisplay">
+				<center>
+					Thusday
+				</center>
+			</div>
+			</center>
+			<br>
+			<table>
+				<thead>
+					<tr>
+						<td>Time</td>
+						<td>Activity</td>
+						<td>Venue</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8:00Am</td>
+						<td>Activity 1</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>11:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>1:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+				</tbody>
+			</table>
+</div>
+	<div class="friday-schedule schedules">
+		<br>
+		<center>
+			<div class="daydisplay">
+				<center>
+					Friday
+				</center>
+			</div>
+			</center>
+			<br>
+
+			<table>
+				<thead>
+					<tr>
+						<td>Time</td>
+						<td>Activity</td>
+						<td>Venue</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>8:00Am</td>
+						<td>Activity 1</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>11:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+					<tr>
+						<td>1:00Am</td>
+						<td>Activity 3</td>
+						<td>venus A</td>
+					</tr>
+				</tbody>
+			</table><br>
+</div>
 </div>
 <br>
 <div class="technicalassistant">
