Registration form UI designed and the log in UI also complete yet to     add logic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<nav>
 		<a href="#" class="active"><span><i class="fa fa-home iconz"></i></span> &nbsp;Home</a>
 		<a href="index.html#schedule-section"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;Schedule</a>
-		<a href="#"><span><i class="fa fa-user iconz"></i></span> &nbsp;Account</a>	
+		<a href="registration.html"><span><i class="fa fa-user iconz"></i></span> &nbsp;Account</a>	
 	</nav>
 		</div>
 	
@@ -79,9 +79,9 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 		<center>
 		 <label class="weekend-header">This weeked activities</label>
 		 <ol>
-		 	<li class="weekend-activitiy1">Design</li>
-		 	<li class="weekend-activitiy2">Design</li>
-		 	<li class="weekend-activitiy1">Design</li>
+		 	<li class="weekend-activitiy1">Activity 1</li>
+		 	<li class="weekend-activitiy2">Activity 2</li>
+		 	<li class="weekend-activitiy1">Activity 3</li>
 		 </ol>
 		 </center>
 	</div>
@@ -97,32 +97,17 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 			</div>
 			</center>
 			<br>
-			<table>
-				<thead>
-					<tr>
-						<td>Time</td>
-						<td>Activity</td>
-						<td>Venue</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>8:00Am</td>
-						<td>Activity 1</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>11:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>1:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-				</tbody>
-			</table>
+			<center>
+			<label class="time-schedule">Time : 8:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 11:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 2:00Pm</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			</center>
 </div>
 	<div class="tuesday-schedule schedules">
 		<br>
@@ -134,32 +119,17 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 			</div>
 			</center>
 			<br>
-			<table>
-				<thead>
-					<tr>
-						<td>Time</td>
-						<td>Activity</td>
-						<td>Venue</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>8:00Am</td>
-						<td>Activity 1</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>11:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>1:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-				</tbody>
-			</table>
+			<center>
+			<label class="time-schedule">Time : 8:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 11:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 2:00Pm</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			</center>
 </div>
 	<div class="wednesday-schedule schedules">
 		<br>
@@ -171,32 +141,17 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 			</div>
 			</center>
 			<br>
-			<table>
-				<thead>
-					<tr>
-						<td>Time</td>
-						<td>Activity</td>
-						<td>Venue</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>8:00Am</td>
-						<td>Activity 1</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>11:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>1:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-				</tbody>
-			</table>
+			<center>
+			<label class="time-schedule">Time : 8:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 11:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 2:00Pm</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			</center>
 </div>
 	<div class="thursday-schedule schedules">
 		<br>
@@ -208,32 +163,17 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 			</div>
 			</center>
 			<br>
-			<table>
-				<thead>
-					<tr>
-						<td>Time</td>
-						<td>Activity</td>
-						<td>Venue</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>8:00Am</td>
-						<td>Activity 1</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>11:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>1:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-				</tbody>
-			</table>
+		<center>
+			<label class="time-schedule">Time : 8:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 11:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 2:00Pm</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			</center>
 </div>
 	<div class="friday-schedule schedules">
 		<br>
@@ -245,33 +185,17 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 			</div>
 			</center>
 			<br>
-
-			<table>
-				<thead>
-					<tr>
-						<td>Time</td>
-						<td>Activity</td>
-						<td>Venue</td>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>8:00Am</td>
-						<td>Activity 1</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>11:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-					<tr>
-						<td>1:00Am</td>
-						<td>Activity 3</td>
-						<td>venus A</td>
-					</tr>
-				</tbody>
-			</table><br>
+            <center>
+			<label class="time-schedule">Time : 8:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 11:00Am</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			<label class="time-schedule">Time : 2:00Pm</label><br>
+			<label>Activity 1</label><br>
+			<label>Venue</label><br><br>
+			</center>
 </div>
 </div>
 <br>
