--- a/registration.html
+++ b/registration.html
@@ -47,9 +47,9 @@
  		<label>Full Name : </label><br>
  		<input type="text" name="" placeholder="First name" class="inputstyle"><br>
  		<input type="text" name="" placeholder="Middle name" class="inputstyle"><br>
- 		<input type="text" name="" placeholder="Last name" class="inputstyle"><br>
+ 		<input type="text" name="" placeholder="Last name" class="inputstyle" ><br>
  		<label>Email :</label><br>
- 		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle"><br>
+ 		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle" id="signupemail"><br>
  		<label>Area of Intrest</label><br>
  		<select class="inputstyle">
  			<option>option 1</option>
@@ -60,11 +60,11 @@
  		<label>Phone Number :</label><br>
  		<input type="text" name="" placeholder="0712345678" class="inputstyle"><br>
  		<label>password :</label><br>
- 		<input type="password" name="" placeholder="password" class="inputstyle"><br>
+ 		<input type="password" name="" placeholder="password" class="inputstyle" id="signuppassword"><br>
  		<label>Confirm Password</label><br>
  		<input type="password" name="" placeholder="Confirm password" class="inputstyle"><br>
  		  <input type="checkbox" name="">  Show Password<br>
- 		<button class="submitbutton">Register Now</button><br>
+ 		<button class="submitbutton" onclick="singupuser()">Register Now</button><br>
  		
  	</center>
  	</div>
@@ -73,9 +73,10 @@
  		<label>Phone Number :</label><br>
  		<input type="text" name="" placeholder="0712345678" class="inputstyle"><br>
  		<label>password :</label><br>
- 		<input type="password" name="" placeholder="password" class="inputstyle"><br>
+ 		<input type="password" name="" placeholder="password" class="inputstyle" ><br>
  		<input type="checkbox" name="">  Show Password<br>
- 		<button class="submitbutton">Logn in</button><br>
+ 		<button class="submitbutton" onclick="singinuser()">Logn in</button><br>
+ 		<button class="submitbutton" onclick="signout()">signout</button><br>
  		</center>
  	</div>
  	</div>
@@ -105,5 +106,8 @@
 		</center><br>
 	</div>
 </div>
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
+<script type="text/javascript" src="scripts/createaccount.js"></script>
 </body>
 </html>
