--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 		<br>
 		<div class="content-discription">
 			<p>
-			With 100 percent of our effort going toward maintaining our current system, it is essential that we are both efficient and effective with our Servicein several ways:
+			With 100 percent of our effort going toward maintaining our current system, it is essential that we are both efficient and effective with our Servicein several ways
 			
       <span>
       These efficiencies are just a few examples of how E-Learning is working to maximize our existing system. The Department will continue to analyze and implement more operational efficiencies as opportunities arise.
@@ -81,7 +81,7 @@ style="background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(
 		 <ol>
 		 	<li class="weekend-activitiy1">Activity 1</li>
 		 	<li class="weekend-activitiy2">Activity 2</li>
-		 	<li class="weekend-activitiy1">Activity 3</li>
+		 	<li class="weekend-activitiy1">Activity 52</li>
 		 </ol>
 		 </center>
 	</div>
