--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -47,8 +47,16 @@
 		<option>Option 1</option>
 		<option>Option 2</option>
 		<option>Option 3</option>
-	</select><br>
+	</select><br><br>
+	<div class="btncontrolsholder">
+		<button class="btncontrol">Save Quiz</button>
+		<button class="btncontrol">Preview Quiz</button>
+		<button class="btncontrol">Upload Quiz</button>
+
 	</div>
+	</div>
+	<br>
+	
 </div><br><br>
 <div class="footer">
 	<div class="rightfooter">
