exam code input added and validated

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -33,6 +33,8 @@
 	 	<div class="quizinputtitle">
 	 		<center><label>Question entry form</label></center>
 	 	</div><br>
+	 	<label>Quiz Code <span style="color: red">*</span></label><br>
+	<input type="text" class="quiztta" id="txtquizcode"><br>
 	<label>Enter Question</label><br>
 	<textarea class="quiztta" id="ttaquestion"></textarea><br>
 	<label>answer Option one</label><br>
@@ -51,7 +53,7 @@
 	<div class="btncontrolsholder">
 		<button class="btncontrol" id="savequiz">Save Quiz</button>
 		<button class="btncontrol" id="quizpreview">Preview Quiz</button>
-		<button class="btncontrol">Upload Quiz</button>
+		<button class="btncontrol" id="uploadquiz">Upload Quiz</button>
 
 	</div>
 	</div>
@@ -109,6 +111,7 @@
 		</center><br>
 	</div>
 </div>
+
 <script type="text/javascript" src="scripts/createquiz.js"></script>
 </body>
 </html>
