--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -33,7 +33,7 @@
 	 	<div class="quizinputtitle">
 	 		<center><label>Question entry form</label></center>
 	 	</div><br>
-	 	<label>Quiz Code <span style="color: red">*</span></label><br>
+	 	<label>Quiz Code <span style="color: red" id="codeerror">*</span></label><br>
 	<input type="text" class="quiztta" id="txtquizcode"><br>
 	<label>Enter Question</label><br>
 	<textarea class="quiztta" id="ttaquestion"></textarea><br>
