Accoutn home page created

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -29,6 +29,49 @@
 	</center>
 	
 </div>
+<br>
+
+<div class="enrolled-holder">
+	<div class="enrolled-title">
+		<center><label>Your Enrolls </label></center>
+	</div>
+	<div class="enrolled">
+		 <div class="enrolled-activity">
+		 	<div class="activitydisplay">
+				<center>
+					Activity One
+				</center>
+			</div><br>
+			 <label>Score : 0.0</label>
+			<p>
+				Just started
+			</p>
+		 </div><br>
+		 <div class="enrolled-activity">
+		 	<div class="activitydisplay">
+				<center>
+					Activity Two
+				</center>
+			</div><br>
+			<label>Score : 0.0</label>
+			<p>
+				Just started
+			</p>
+		 </div><br>
+		 <div class="enrolled-activity">
+		 	<div class="activitydisplay">
+				<center>
+					Activity There
+				</center>
+			</div><br>
+			<label>Score : 0.0</label>
+			<p>
+				Just started
+			</p>
+		 </div>
+		
+	</div>
+</div>
 
 <br>
 <div class="weekend-schedule" id="schedule-section">
