student score sumed

--- a/quizapp.html
+++ b/quizapp.html
@@ -32,7 +32,7 @@
 	 		<center><label>Answer questions</label></center>
 	 		<label>Time : (minutes) <span>30 : 00</span></label><br>
 	 		<label>Question : <span>1</span><span>/</span><span>30</span></label>
-	 		<label style="float: right;">Score : <span>0</span></label>
+	 		<label style="float: right;">Score : <span id="scoredmarks">0</span></label>
 	 	</div><br>
 	<p id="quizholder">
 		
@@ -90,6 +90,6 @@
  	<div style="background: #FD4935;">3</div>
  	<div style="background: brown">4</div>
  </div> -->
- <script type="text/javascript" src="scripts/account.js"></script>
+ <script type="text/javascript" src="scripts/quizapp.js"></script>
 </body>
 </html>
