modified file styling done

--- a/registration.html
+++ b/registration.html
@@ -35,8 +35,8 @@
  			<center>
  				<table>
  					<tr>
- 						<td class="callregform">Regidtration  &nbsp;</td>
- 						<td class="callloginform">&nbsp; Log in</td>
+ 						<td class="callregform" id="btncallregfor">Regidtration  &nbsp;</td>
+ 						<td class="callloginform" id="btncalllogin">&nbsp; Log in</td>
  					</tr>
  				</table>
  			</center>
@@ -62,8 +62,8 @@
  		<label>password :</label><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="signuppassword"><br>
  		<label>Confirm Password</label><br>
- 		<input type="password" name="" placeholder="Confirm password" class="inputstyle"><br>
- 		  <input type="checkbox" name="">  Show Password<br>
+ 		<input type="password" name="" placeholder="Confirm password" class="inputstyle" id="confirmsignuppassword"><br>
+ 		  <input type="checkbox" name="" id="showpassword1">  Show Password<br>
  		<button class="submitbutton" onclick="singupuser()">Register Now</button><br>
  		
  	</center>
@@ -73,8 +73,8 @@
  		<label>Phone Number :</label><br>
  		<input type="text" name="" placeholder="0712345678" class="inputstyle"><br>
  		<label>password :</label><br>
- 		<input type="password" name="" placeholder="password" class="inputstyle" ><br>
- 		<input type="checkbox" name="">  Show Password<br>
+ 		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
+ 		<input type="checkbox" name="" id="showpassword2">  Show Password<br>
  		<button class="submitbutton" onclick="singinuser()">Logn in</button><br>
  		<button class="submitbutton" onclick="signout()">signout</button><br>
  		</center>
