--- a/registration.html
+++ b/registration.html
@@ -71,7 +71,7 @@
  	<div class="loginform">
  		<center>
  		<label>Phone Number :</label><br>
- 		<input type="text" name="" placeholder="0712345678" class="inputstyle"><br>
+ 		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle"><br>
  		<label>password :</label><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
  		<input type="checkbox" name="" id="showpassword2">  Show Password<br>
