quiz title add and styling done

--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -33,8 +33,10 @@
 	 	<div class="quizinputtitle">
 	 		<center><label>Question entry form</label></center>
 	 	</div><br>
-	 	<label>Quiz Code <span style="color: red" id="codeerror">*</span></label><br>
+	 <label>Quiz Code <span style="color: red" id="codeerror">*</span></label><br>
 	<input type="text" class="quiztta" id="txtquizcode"><br>
+	<label>Quiz Title <span style="color: red" id="titleerror">*</span></label><br>
+	<input type="text" class="quiztta" id="txtquiztitle"><br>
 	<label>Enter Question</label><br>
 	<textarea class="quiztta" id="ttaquestion"></textarea><br>
 	<label>answer Option one</label><br>
