--- a/registration.html
+++ b/registration.html
@@ -108,6 +108,7 @@
 </div>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
+<script type="text/javascript" src="scripts/frconelearning.js"></script>
 <script type="text/javascript" src="scripts/createaccount.js"></script>
 </body>
 </html>
