account loging deatils created

--- a/registration.html
+++ b/registration.html
@@ -45,33 +45,33 @@
  		<div class="regform">
  		<center>
  		<label>Full Name : </label><br>
- 		<input type="text" name="" placeholder="First name" class="inputstyle"><br>
- 		<input type="text" name="" placeholder="Middle name" class="inputstyle"><br>
- 		<input type="text" name="" placeholder="Last name" class="inputstyle" ><br>
+ 		<input type="text" name="" placeholder="First name" class="inputstyle" id="txtfirstname"><br>
+ 		<input type="text" name="" placeholder="Middle name" class="inputstyle" id="txtmiddlename"><br>
+ 		<input type="text" name="" placeholder="Last name" class="inputstyle" id="txtlastname"><br>
  		<label>Email :</label><br>
  		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle" id="signupemail"><br>
  		<label>Area of Intrest</label><br>
- 		<select class="inputstyle">
+ 		<select class="inputstyle" id="cmbspecialization">
  			<option>option 1</option>
- 			<option>option 1</option>
- 			<option>option 1</option>
- 			<option>option 1</option>
+ 			<option>option 2</option>
+ 			<option>option 3</option>
+ 			<option>option 4</option>
  		</select><br>
  		<label>Phone Number :</label><br>
- 		<input type="text" name="" placeholder="0712345678" class="inputstyle"><br>
+ 		<input type="text" name="" placeholder="0712345678" class="inputstyle" id="txtphone"><br>
  		<label>password :</label><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="signuppassword"><br>
  		<label>Confirm Password</label><br>
  		<input type="password" name="" placeholder="Confirm password" class="inputstyle" id="confirmsignuppassword"><br>
  		  <input type="checkbox" name="" id="showpassword1">  Show Password<br>
- 		<button class="submitbutton" onclick="singupuser()">Register Now</button><br>
+ 		<button class="submitbutton" id="btnsubmitdetails">Register Now</button><br>
  		
  	</center>
  	</div>
  	<div class="loginform">
  		<center>
  		<label>Phone Number :</label><br>
- 		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle"><br>
+ 		<input type="text" name="" placeholder="example@gmail.com" class="inputstyle" id="txtsiginemail"><br>
  		<label>password :</label><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
  		<input type="checkbox" name="" id="showpassword2">  Show Password<br>
