signup and signin working yet to fix signout

--- a/registration.html
+++ b/registration.html
@@ -75,7 +75,7 @@
  		<label>password :</label><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
  		<input type="checkbox" name="" id="showpassword2">  Show Password<br>
- 		<button class="submitbutton" onclick="singinuser()">Logn in</button><br>
+ 		<button class="submitbutton" id="btnsubmitlogin">Logn in</button><br>
  		<button class="submitbutton" onclick="signout()">signout</button><br>
  		</center>
  	</div>
