modified file add addactivity button

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -69,6 +69,18 @@
 				Just started
 			</p>
 		 </div>
+		 <div  class="enrolled-activity addactivity">
+		 	<div class="activitydisplay">
+				<center>
+					<span style="color: dodgerblue">Add activity</span>
+					
+				</center>
+			</div><br>
+			<center>
+				<span id="addactivity"><i class="fa fa-plus  fa-3x"></i> </span>
+			</center>
+			
+		 </div>
 		
 	</div>
 </div>
