Made changes  to book cards and opacity

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -30,7 +30,7 @@
 	
 </div>
 <br>
-
+<div id="opacity">
 <div class="enrolled-holder">
 	<div class="enrolled-title">
 		<center><label>Your Enrolls </label></center>
@@ -180,7 +180,7 @@
 </div>
 </div>
 <br>
-
+</div>
 <div class="popupmenu">
 	<div class="popuptitle">
 		<center>
@@ -193,6 +193,30 @@
 	<a href="#">Logout</a><br><br><br>
 	</center>
 </div><br>
+
+<div class="popupaddenroll">
+	<div class="popuptitle">
+		<center>
+			<span>Fill the form to enroll</span>
+		</center>
+	</div><br>
+	 <label>Select Course</label><br>
+	 <select class="inputstyle" id="coursetoenroll">
+	 	<option>Option 1</option>
+	 	<option>Option 2</option>
+	 	<option>Option 3</option>
+	 	<option>Option 4</option>
+	 </select><br>
+	  <label>Select Level</label><br>
+	 <select class="inputstyle" id="skilllevel">
+	 	<option>Beginner</option>
+	 	<option>Intermediate</option>
+	 	<option>Expert</option>
+	 </select><br>
+	 <button class="submitbutton" id="btncancelenroll">Cancel</button><br>
+	 <button class="submitbutton" id="btnsubmitenroll">Enroll Now</button>
+
+</div>
 <div class="footer">
 	<div class="rightfooter">
 		<center>
