--- a/accesedacc.html
+++ b/accesedacc.html
@@ -249,6 +249,9 @@
  	<div style="background: #FD4935;">3</div>
  	<div style="background: brown">4</div>
  </div> -->
+ <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
+<script type="text/javascript" src="scripts/frconelearning.js"></script>
  <script type="text/javascript" src="scripts/account.js"></script>
 </body>
 </html>
