Singin and singout completely functuonal

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -20,9 +20,9 @@
 			<br>
 				<nav>
 		<a href="#" class="active"><span><i class="fa fa-home iconz"></i></span> &nbsp;My Account</a>
-		<a href="#"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;My Schedule</a>
-		<a href="#"><span><i class="fa fa-user iconz"></i></span> &nbsp;Results</a>	
-		<span class="profileicon" id="fdsa"><i class="fa fa-user  fa-3x"></i></span>
+		<a href="accesedacc.html#schedule-section"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;My Schedule</a>
+		<a href="results.html"><span><i class="fa fa-user iconz"></i></span> &nbsp;Results</a>	
+		<span class="profileicon" id="fdsa"><span id="logedinusername">usrename &nbsp;&nbsp;</span><i class="fa fa-user  fa-3x"></i></span>
 	</nav>
 		</div>
 	
@@ -64,6 +64,8 @@
 		 	<li class="weekend-activitiy2">Activity 2</li>
 		 	<li class="weekend-activitiy1">Activity 3</li>
 		 </ol>
+
+		  <button id="openquiz">open Quiz</button>
 		 </center>
 	</div>
 </div><br>
@@ -190,7 +192,7 @@
 	<center>
 	<a href="#">Profile</a><br><br><br>
 	<a href="#">&nbsp;&nbsp;Help&nbsp;&nbsp;</a><br><br><br>
-	<a href="#">Logout</a><br><br><br>
+	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
 </div><br>
 
