--- a/quizapp.html
+++ b/quizapp.html
@@ -16,8 +16,10 @@
 		logo here<br><br><br>
 	</div>
 	<center>
+		 
 		<div class="navbar">
-			<label class="username">Username</label>
+			<label class="backhome" id="backhome"><span><i class="fa fa-angle-double-left iconz fa-2x" ></i></span></label>
+			<label class="username" id="logedinusername">Username</label>
 		</div>
 	
 	</center>
