--- a/registration.html
+++ b/registration.html
@@ -35,7 +35,7 @@
  			<center>
  				<table>
  					<tr>
- 						<td class="callregform" id="btncallregfor">Regidtration  &nbsp;</td>
+ 						<td class="callregform" id="btncallregfor">Registration  &nbsp;</td>
  						<td class="callloginform" id="btncalllogin">&nbsp; Log in</td>
  					</tr>
  				</table>
@@ -76,7 +76,6 @@
  		<input type="password" name="" placeholder="password" class="inputstyle" id="siginppassword" ><br>
  		<input type="checkbox" name="" id="showpassword2">  Show Password<br>
  		<button class="submitbutton" id="btnsubmitlogin">Logn in</button><br>
- 		<button class="submitbutton" onclick="signout()">signout</button><br>
  		</center>
  	</div>
  	</div>
