--- a/results.html
+++ b/results.html
@@ -19,10 +19,11 @@
 		<div class="navbar">
 			<br>
 				<nav>
-		<a href="#" class="active"><span><i class="fa fa-home iconz"></i></span> &nbsp;My Account</a>
-		<a href="#"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;My Schedule</a>
-		<a href="#"><span><i class="fa fa-user iconz"></i></span> &nbsp;Results</a>	
-		<span class="profileicon" id="fdsa"><i class="fa fa-user  fa-3x"></i></span>
+		<a href="#"  class="active"><span><i class="fa fa-user iconz"></i></span> &nbsp;Results</a>
+		<a href="accesedacc.html"><span><i class="fa fa-home iconz"></i></span> &nbsp;My Account</a>
+		<a href="accesedacc.html#schedule-section"><span><i class="fa fa-calendar iconz"></i></span> &nbsp;My Schedule</a>
+			
+		<span class="profileicon" id="fdsa"> <span id="logedinusername">usrename &nbsp;&nbsp;</span><i class="fa fa-user  fa-3x"></i></span>
 	</nav>
 		</div>
 	
@@ -40,7 +41,7 @@
 	<center>
 	<a href="#">Profile</a><br><br><br>
 	<a href="#">&nbsp;&nbsp;Help&nbsp;&nbsp;</a><br><br><br>
-	<a href="#">Logout</a><br><br><br>
+	<a href="#" id="btnlogout">Logout</a><br><br><br>
 	</center>
 </div>
 <br>
