--- a/registration.html
+++ b/registration.html
@@ -59,7 +59,7 @@
  		</select><br>
  		<label>Phone Number :</label><br>
  		<input type="text" name="" placeholder="0712345678" class="inputstyle" id="txtphone"><br>
- 		<label>password :</label><br>
+ 		<label>password :</label><span style="font-size: 12px">Should be at least 6 charactors</span><br>
  		<input type="password" name="" placeholder="password" class="inputstyle" id="signuppassword"><br>
  		<label>Confirm Password</label><br>
  		<input type="password" name="" placeholder="Confirm password" class="inputstyle" id="confirmsignuppassword"><br>
