--- a/registration.html
+++ b/registration.html
@@ -105,7 +105,11 @@
 		</center><br>
 	</div>
 </div>
+
+
+
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
 <script type="text/javascript" src="scripts/frconelearning.js"></script>
 <script type="text/javascript" src="scripts/createaccount.js"></script>
