--- a/quizapp.html
+++ b/quizapp.html
@@ -93,6 +93,7 @@
  	<div style="background: brown">4</div>
  </div> -->
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
 <script type="text/javascript" src="scripts/frconelearning.js"></script>
  <script type="text/javascript" src="scripts/quizapp.js"></script>
