--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -37,6 +37,8 @@
 	<input type="text" class="quiztta" id="txtquizcode"><br>
 	<label>Quiz Title <span style="color: red" id="titleerror">*</span></label><br>
 	<input type="text" class="quiztta" id="txtquiztitle"><br>
+	<label>Question Number <span style="color: red" id="numbererror">*</span></label><br>
+	<input type="text" class="quiztta" id="txtquiznumber" disabled=""><br>
 	<label>Enter Question</label><br>
 	<textarea class="quiztta" id="ttaquestion"></textarea><br>
 	<label>answer Option one</label><br>
