--- a/adminquizcontrol.html
+++ b/adminquizcontrol.html
@@ -58,6 +58,7 @@
 		<button class="btncontrol" id="savequiz">Save Quiz</button>
 		<button class="btncontrol" id="quizpreview">Preview Quiz</button>
 		<button class="btncontrol" id="uploadquiz">Upload Quiz</button>
+		<button class="btncontrol" id="completequiz">Complete Quiz</button>
 
 	</div>
 	</div>
