modified file quiz questuins fetched from database not complete

--- a/accesedacc.html
+++ b/accesedacc.html
@@ -37,7 +37,20 @@
 	</div>
 	<div class="enrolled">
 		 
-		 
+		<div class="enrolled-activity">
+		 	<div class="activitydisplay">
+				<center>
+					<label id="courseid">100</label>
+				</center>
+			</div><br>
+			 <label>Score : 0.0</label>
+			<p>
+				Just started <br>
+				<span>Level :</span> <br>
+			<span id="quizno">1</span> <br><br>
+			<button id="openquizup" onclick="openquizpage()">open Quiz</button> 
+			</p>
+		 </div><br> 
 		
 	</div>
 	<div  class="enrolled-activity addactivity">
