--- a/quizapp.html
+++ b/quizapp.html
@@ -33,7 +33,7 @@
 	 	<div class="quizinputtitle">
 	 		<center><label>Answer questions</label></center>
 	 		<label>Time : (minutes) <span>30 : 00</span></label><br>
-	 		<label>Question : <span>1</span><span>/</span><span>30</span></label>
+	 		<label>Question : <span id="quizno"></span><span>/</span><span>30</span></label>
 	 		<label style="float: right;">Score : <span id="scoredmarks">0</span></label>
 	 	</div><br>
 	<p id="quizholder">
@@ -93,7 +93,7 @@
  	<div style="background: brown">4</div>
  </div> -->
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-auth.js"></script>
 <script type="text/javascript" src="scripts/frconelearning.js"></script>
  <script type="text/javascript" src="scripts/quizapp.js"></script>
