modified file quiz questuins fetched from database not complete

--- a/quizapp.html
+++ b/quizapp.html
@@ -41,11 +41,11 @@
 	</p>
 	<br>
 	<form>
-	<input type="radio" name="ans" value="1">
+	<input type="radio" name="ans" value="1" id="answerbutton">
 	<label for="option1" id="ans1"></label><br>
-	<input type="radio" name="ans" value="2">
+	<input type="radio" name="ans" value="2" id="answerbutton">
 	<label for="option1" id="ans2"></label><br>
-	<input type="radio" name="ans"  value="3">
+	<input type="radio" name="ans"  value="3" id="answerbutton">
 	<label for="option1" id="ans3"></label>
 </form>
 	<br><br>
